<resources>
    <string name="app_name">Practica-FB21010</string>
    <string name="btn_1">Suma</string>
    <string name="btn_2">Resta</string>
    <string name="btn_3">Multi</string>
    <string name="btn_4">Divis</string>
    <string name="txt_1">Valor 1</string>
    <string name="txt_2">Valor 2</string>
    <string name="txt_3">Valor 3</string>
    <string name="lbl_1">Calculadora</string>
    <string name="lbl_2">El resultado es: %d</string>

</resources>